<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/phonebook_title_label"/>

            <EditText
                android:id="@+id/phonebook_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorGrey"
                android:backgroundTint="@color/colorGrey"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:hint="@string/phonebook_title_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/phonebook_details_label"/>

        <EditText
            android:id="@+id/phonebook_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorGrey"
            android:backgroundTint="@color/colorGrey"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:hint="@string/phonebook_details" />

    </LinearLayout>

    <Button
        android:id="@+id/phonebook_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_message"
        android:drawableEnd="@drawable/ic_next"
        android:backgroundTint="@color/colorDarkGrey"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="13dp"
        android:text="@string/phonebook_button"/>

</LinearLayout>